ags (1.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented :thread-pool property of AgsReturnableThread
	* implemented :max-precision of AgsThread
	* TODO:JK: implemented configuration option of thread's max-precision property
	* TODO:JK: implemented sticky controls
	* TODO:JK: fixed wrecked widget allocation of AgsEditor and AgsAutomationEditor
	* TODO:JK: add more functional tests
	* TODO:JK: add more unit tests

ags (1.0.0-beta)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsPasswordStore and AgsAuthentication interfaces
	* TODO:JK: implemented destroy functions
	* TODO:JK: implemented iterator and recycling thread
	* TODO:JK: implemented AgsAbstractBasePluginManager
	* TODO:JK: implemented AgsPluginFactory
	* TODO:JK: implemented missing interface functions of AgsConnectable, ...
	* TODO:JK: implemented MIDI and sequencer API
	* TODO:JK: refactored AgsLadspaManager, AgsDssiManager, AgsLv2Manager and AgsLv2uiManager to inherit of AgsAbstractBasePluginManager
	* TODO:JK: extended AgsSoundProvider interface to provide plugin managers
	* extended AgsServiceProvider interface to provide managers

ags (0.9.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsRampAccelerationDialog
	* implemented AgsSelectAccelerationDialog
	* implemented AgsSelectNoteDialog
	* improved functional-tests.mk to solve linker issue with circular dependency
	* improved unit-tests.mk to linker issue with circular dependency
	* added AGS_RECALL_RUN_FIRST and AGS_RECALL_RUN_LAST flags
	* fixed ags_turtle_load() buffer index excess
	* fixed ags_functional_note_edit_test.c array index excess in main()
	* fixed double free of string in ags_lv2_browser_plugin_uri_callback()

ags (0.9.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsGuiThread minimum sync count with AgsTaskThread

ags (0.9.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]