@@ -3,8 +3,9 @@ ags (1.0.0)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented :thread-pool property of AgsReturnableThread
 	* implemented :max-precision of AgsThread
-	* TODO:JK: implemented configuration option of thread's max-precision property
+	* implemented configuration option of thread's max-precision property
 	* TODO:JK: implemented sticky controls
+	* TODO:JK: improved LV2UI plugin support to set controls value
 	* TODO:JK: fixed wrecked widget allocation of AgsEditor and AgsAutomationEditor
 	* TODO:JK: add more functional tests
 	* TODO:JK: add more unit tests
